--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,7 +26,8 @@ nav {
   margin: 0 15px;
 }
 .nav-user-icon img {
-  width: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -260,6 +261,7 @@ nav {
 }
 .user-profile img {
   width: 45px;
+  height: 45px;
   border-radius: 50%;
   margin-right: 10px;
 }
