--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,3 @@
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Social Media</title>
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script
-    src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
-    data-auto-replace-svg="nest"
-  ></script>
-</head>
-
 <nav>
   <div class="nav-left">
     <a href="Index.html">
@@ -26,8 +14,8 @@
       <img src="https://i.postimg.cc/SKtHgM6Q/search.png" />
       <input type="text" placeholder="Search" />
     </div>
-    <div class="nav-user-icon online" (click)="settingsMenuToggle()">
-      <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
+    <div class="nav-user-icon online">
+      <img src={{userprofilephoto}} />
     </div>
   </div>
   <!----------------Settings Menu"----------------------->
@@ -119,57 +107,64 @@
     <div class="shortcut-link">
       <p>Your Shortcuts</p>
       <a href="#"
-        ><img src="https://i.postimg.cc/3JHVf7vG/shortcut-1.png" />Web
-        Developers</a
+        ><img src={{ys1.image_url}}/>{{ys1.text}}</a
       >
       <a href="#"
-        ><img src="https://i.postimg.cc/rFCbvb1P/shortcut-2.png" />Web Design
-        course</a
+        ><img src={{ys2.image_url}}/>{{ys2.text}}</a
       >
       <a href="#"
-        ><img src="https://i.postimg.cc/0yk3xfZ2/shortcut-3.png" />Full Strack
-        Development</a
+        ><img src={{ys3.image_url}}/>{{ys3.text}}</a
       >
       <a href="#"
-        ><img src="https://i.postimg.cc/Z5wQqdDP/shortcut-4.png" />Website
-        Experts</a
+        ><img src={{ys4.image_url}}/>{{ys4.text}}</a
       >
     </div>
   </div>
   <!----------------Main Sidebar----------------------->
   <div class="main-content">
     <div class="story-gallery">
-      <div class="story story1">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
+      url({{story1}});">
         <img src="https://i.postimg.cc/TPh453Zz/upload.png" />
         <p>Post Story</p>
       </div>
-      <div class="story story2">
+
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
+      url({{story2.url}});">
         <img src="https://i.postimg.cc/XNPtfdVs/member-1.png" />
-        <p>Alison</p>
+        <p>{{story2.name}}</p>
+
       </div>
-      <div class="story story3">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
+      url({{story3.url}});">
         <img src="https://i.postimg.cc/4NhqByys/member-2.png" />
-        <p>Jackson</p>
+        <p>{{story3.name}}</p>
+
       </div>
-      <div class="story story4">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
+      url({{story4.url}});">
         <img src="https://i.postimg.cc/FH5qqvkc/member-3.png" />
-        <p>Samona</p>
+        <p>{{story4.name}}</p>
+
       </div>
-      <div class="story story5">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
+      url({{story5.url}});">
         <img src="https://i.postimg.cc/Sx65bPcP/member-4.png" />
-        <p>John Doe</p>
+        <p>{{story5.name}}</p>
+
       </div>
     </div>
+
     <div class="write-post-container">
       <div class="user-profile">
         <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
         <div>
-          <p>John Nicholson</p>
+          <p>{{user.firstname+" "+user.lastname}}</p>
           <small>Public <i class="fas fa-caret-down"></i></small>
         </div>
       </div>
       <div class="post-input-container">
-        <textarea rows="3" placeholder="What's on your mind, John?"></textarea>
+        <textarea rows="3" placeholder="What's on your mind {{user.firstname}}?"></textarea>
         <div class="add-post-links">
           <a href="#"
             ><img src="https://i.postimg.cc/QMD2BDXs/live-video.png" />Live
@@ -186,181 +181,34 @@
         </div>
       </div>
     </div>
-    <div class="post-container">
+
+    <div *ngFor="let post of posts" class="post-container">
       <div class="post-row">
         <div class="user-profile">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
+          <img [src]="post.imgSrc" />
           <div>
-            <p>John Nicholson</p>
-            <span>June 24 2021, 13:40 pm</span>
+            <p>{{ post.userName }}</p>
+            <span>{{ post.timestamp }}</span>
           </div>
         </div>
         <a href="#"><i class="fas fa-ellipsis-v"></i></a>
       </div>
-      <p class="post-text">
-        Subscribe <span></span> Youtube Channel to watch more videos on website
-        development and UI desings. <a href="#">#VkiveTutorials</a>
-        <a href="#">#YoutubeChannel</a>
-      </p>
-      <img
-        src="https://i.postimg.cc/9fjhGTY6/feed-image-1.png"
-        class="post-img"
-      />
+      <p class="post-text" [innerHTML]="post.postText"></p>
+      <img [src]="post.postImgSrc" class="post-img" />
       <div class="post-row">
         <div class="activity-icons">
           <div>
-            <img src="https://i.postimg.cc/pLKNXrMq/like-blue.png" />120
+            <img src="https://i.postimg.cc/pLKNXrMq/like-blue.png" />{{ post.likeCount }}
           </div>
-          <div><img src="https://i.postimg.cc/rmjMymWv/comments.png" />45</div>
-          <div><img src="https://i.postimg.cc/T2bBchpG/share.png" />20</div>
+          <div><img src="https://i.postimg.cc/rmjMymWv/comments.png" />{{ post.commentCount }}</div>
+          <div><img src="https://i.postimg.cc/T2bBchpG/share.png" />{{ post.shareCount }}</div>
         </div>
         <div class="post-porfile-icon">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" /><i
-            class="fas fa-caret-down"
-          ></i>
+          <img [src]="post.imgSrc" /><i class="fas fa-caret-down"></i>
         </div>
       </div>
     </div>
-    <div class="post-container">
-      <div class="post-row">
-        <div class="user-profile">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
-          <div>
-            <p>John Nicholson</p>
-            <span>June 24 2021, 13:40 pm</span>
-          </div>
-        </div>
-        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
-      </div>
-      <p class="post-text">
-        Like and share this video with friends, tag<span></span>facebook page on
-        your post. Ask your dobuts in the comments.
-        <a href="#">#VkiveTutorials</a> <a href="#">#YoutubeChannel</a>
-      </p>
-      <img
-        src="https://i.postimg.cc/Xvc0xJ2p/feed-image-2.png"
-        class="post-img"
-      />
-      <div class="post-row">
-        <div class="activity-icons">
-          <div>
-            <img src="https://i.postimg.cc/pLKNXrMq/like-blue.png" />120
-          </div>
-          <div><img src="https://i.postimg.cc/rmjMymWv/comments.png" />45</div>
-          <div><img src="https://i.postimg.cc/T2bBchpG/share.png" />20</div>
-        </div>
-        <div class="post-porfile-icon">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" /><i
-            class="fas fa-caret-down"
-          ></i>
-        </div>
-      </div>
-    </div>
-    <div class="post-container">
-      <div class="post-row">
-        <div class="user-profile">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
-          <div>
-            <p>John Nicholson</p>
-            <span>June 24 2021, 13:40 pm</span>
-          </div>
-        </div>
-        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
-      </div>
-      <p class="post-text">
-        Like and share this video with friends, tag<span></span>facebook page on
-        your post. Ask your dobuts in the comments.
-        <a href="#">#VkiveTutorials</a> <a href="#">#YoutubeChannel</a>
-      </p>
-      <img
-        src="https://i.postimg.cc/tJ7QXz9x/feed-image-3.png"
-        class="post-img"
-      />
-      <div class="post-row">
-        <div class="activity-icons">
-          <div>
-            <img src="https://i.postimg.cc/pLKNXrMq/like-blue.png" />120
-          </div>
-          <div><img src="https://i.postimg.cc/rmjMymWv/comments.png" />45</div>
-          <div><img src="https://i.postimg.cc/T2bBchpG/share.png" />20</div>
-        </div>
-        <div class="post-porfile-icon">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" /><i
-            class="fas fa-caret-down"
-          ></i>
-        </div>
-      </div>
-    </div>
-    <div class="post-container">
-      <div class="post-row">
-        <div class="user-profile">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
-          <div>
-            <p>John Nicholson</p>
-            <span>June 24 2021, 13:40 pm</span>
-          </div>
-        </div>
-        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
-      </div>
-      <p class="post-text">
-        Like and share this video with friends, tag<span></span>facebook page on
-        your post. Ask your dobuts in the comments.
-        <a href="#">#VkiveTutorials</a> <a href="#">#YoutubeChannel</a>
-      </p>
-      <img
-        src="https://i.postimg.cc/hjDRYBwM/feed-image-4.png"
-        class="post-img"
-      />
-      <div class="post-row">
-        <div class="activity-icons">
-          <div>
-            <img src="https://i.postimg.cc/pLKNXrMq/like-blue.png" />120
-          </div>
-          <div><img src="https://i.postimg.cc/rmjMymWv/comments.png" />45</div>
-          <div><img src="https://i.postimg.cc/T2bBchpG/share.png" />20</div>
-        </div>
-        <div class="post-porfile-icon">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" /><i
-            class="fas fa-caret-down"
-          ></i>
-        </div>
-      </div>
-    </div>
-    <div class="post-container">
-      <div class="post-row">
-        <div class="user-profile">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
-          <div>
-            <p>John Nicholson</p>
-            <span>June 24 2021, 13:40 pm</span>
-          </div>
-        </div>
-        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
-      </div>
-      <p class="post-text">
-        Like and share this video with friends, tag<span></span>facebook page on
-        your post. Ask your dobuts in the comments.
-        <a href="#">#VkiveTutorials</a> <a href="#">#YoutubeChannel</a>
-      </p>
-      <img
-        src="https://i.postimg.cc/ZRwztQzm/feed-image-5.png"
-        class="post-img"
-      />
-      <div class="post-row">
-        <div class="activity-icons">
-          <div>
-            <img src="https://i.postimg.cc/pLKNXrMq/like-blue.png" />120
-          </div>
-          <div><img src="https://i.postimg.cc/rmjMymWv/comments.png" />45</div>
-          <div><img src="https://i.postimg.cc/T2bBchpG/share.png" />20</div>
-        </div>
-        <div class="post-porfile-icon">
-          <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" /><i
-            class="fas fa-caret-down"
-          ></i>
-        </div>
-      </div>
-    </div>
+    
     <button type="button" class="load-more-btn">Load More</button>
   </div>
   <!----------------Right Sidebar----------------------->
@@ -369,28 +217,19 @@
       <h4>Events</h4>
       <a href="#">See All</a>
     </div>
-    <div class="event">
+
+    <div *ngFor="let d of Date" class="event">
       <div class="left-event">
-        <h3>18</h3>
-        <span>March</span>
+        <h3>{{d.Day}}</h3>
+        <span>{{d.Month}}</span>
       </div>
       <div class="right-event">
-        <h4>Social Media</h4>
-        <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
+        <h4>{{d.desc}}</h4>
+        <p><i class="fas fa-map-marker-alt"></i>{{d.venue}}</p>
         <a href="#">More Info</a>
       </div>
     </div>
-    <div class="event">
-      <div class="left-event">
-        <h3>22</h3>
-        <span>June</span>
-      </div>
-      <div class="right-event">
-        <h4>Mobile Marketing</h4>
-        <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
-        <a href="#">More Info</a>
-      </div>
-    </div>
+
     <div class="sidebar-title">
       <h4>Advertisement</h4>
       <a href="#">close</a>
