--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,44 +120,39 @@
       >
     </div>
   </div>
+
   <!----------------Main Sidebar----------------------->
   <div class="main-content">
     <div class="story-gallery">
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
-      url({{story1}});">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{your_story}})">
         <img src="https://i.postimg.cc/TPh453Zz/upload.png" />
         <p>Post Story</p>
       </div>
 
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
-      url({{story2.url}});">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story2.url}})">
         <img src="https://i.postimg.cc/XNPtfdVs/member-1.png" />
         <p>{{story2.name}}</p>
 
       </div>
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
-      url({{story3.url}});">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story3.url}})">
         <img src="https://i.postimg.cc/4NhqByys/member-2.png" />
         <p>{{story3.name}}</p>
 
       </div>
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
-      url({{story4.url}});">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story4.url}})">
         <img src="https://i.postimg.cc/FH5qqvkc/member-3.png" />
         <p>{{story4.name}}</p>
 
       </div>
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),
-      url({{story5.url}});">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story5.url}})">
         <img src="https://i.postimg.cc/Sx65bPcP/member-4.png" />
         <p>{{story5.name}}</p>
-
       </div>
     </div>
 
     <div class="write-post-container">
       <div class="user-profile">
-        <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
+        <img src={{userprofilephoto}} />
         <div>
           <p>{{user.firstname+" "+user.lastname}}</p>
           <small>Public <i class="fas fa-caret-down"></i></small>
