--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -114,11 +114,7 @@ nav {
   border-radius: 4px;
   margin-right: 15px;
 }
-.shortcut-link p {
-  margin: 25px 0;
-  color: #626262;
-  font-weight: 500;
-}
+
 .sidebar-title {
   display: flex;
   align-items: center;
@@ -206,7 +202,8 @@ nav {
 }
 .story img {
   position: absolute;
-  width: 45px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   top: 10px;
   left: 10px;
