--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -104,48 +104,41 @@
       <a href="#"><img src="https://i.postimg.cc/VsXHCTVk/watch.png" />Watch</a>
       <a href="#">See More</a>
     </div>
-    <div class="shortcut-link">
-      <p>Your Shortcuts</p>
+
+    <p style="margin: 25px 0;color: #626262;font-weight: 500;">Your Shortcuts</p>
+    <div *ngFor="let i of shortcuts" class="shortcut-link">
       <a href="#"
-        ><img src={{ys1.image_url}}/>{{ys1.text}}</a
-      >
-      <a href="#"
-        ><img src={{ys2.image_url}}/>{{ys2.text}}</a
-      >
-      <a href="#"
-        ><img src={{ys3.image_url}}/>{{ys3.text}}</a
-      >
-      <a href="#"
-        ><img src={{ys4.image_url}}/>{{ys4.text}}</a
+        ><img src={{i.image_url}}/>{{i.text}}</a
       >
     </div>
   </div>
 
   <!----------------Main Sidebar----------------------->
   <div class="main-content">
+    
     <div class="story-gallery">
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{your_story}})">
+      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{userprofilephoto}})">
         <img src="https://i.postimg.cc/TPh453Zz/upload.png" />
         <p>Post Story</p>
       </div>
 
       <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story2.url}})">
-        <img src="https://i.postimg.cc/XNPtfdVs/member-1.png" />
+        <img src={{story2.profile_url}} />
         <p>{{story2.name}}</p>
 
       </div>
       <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story3.url}})">
-        <img src="https://i.postimg.cc/4NhqByys/member-2.png" />
+        <img src={{story3.profile_url}} />
         <p>{{story3.name}}</p>
 
       </div>
       <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story4.url}})">
-        <img src="https://i.postimg.cc/FH5qqvkc/member-3.png" />
+        <img src={{story4.profile_url}} />
         <p>{{story4.name}}</p>
 
       </div>
       <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story5.url}})">
-        <img src="https://i.postimg.cc/Sx65bPcP/member-4.png" />
+        <img src={{story5.profile_url}} />
         <p>{{story5.name}}</p>
       </div>
     </div>
