--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,258 +1,7 @@
-<nav>
-  <div class="nav-left">
-    <a href="Index.html">
-      <img src="https://i.postimg.cc/Y9nZymQq/logo2.png" class="logo" />
-    </a>
-    <ul>
-      <li><img src="https://i.postimg.cc/Fs3m1Djy/notification.png" /></li>
-      <li><img src="https://i.postimg.cc/YqGKZ8nc/inbox.png" /></li>
-      <li><img src="https://i.postimg.cc/xCzpgFjg/video.png" /></li>
-    </ul>
-  </div>
-  <div class="nav-right">
-    <div class="search-box">
-      <img src="https://i.postimg.cc/SKtHgM6Q/search.png" />
-      <input type="text" placeholder="Search" />
-    </div>
-    <div class="nav-user-icon online">
-      <img src={{userprofilephoto}} />
-    </div>
-  </div>
-  <!----------------Settings Menu"----------------------->
-  <div class="settings-menu">
-    <div id="dark-btn">
-      <span></span>
-    </div>
-    <div class="settings-menu-inner">
-      <div class="user-profile">
-        <img src="https://i.postimg.cc/cHg22LhR/profile-pic.png" />
-        <div>
-          <p>John Nicholson</p>
-          <a href="profile.html">See your profile</a>
-        </div>
-      </div>
-      <hr />
-      <div class="user-profile">
-        <img src="https://i.postimg.cc/hv3nx52s/feedback.png" />
-        <div>
-          <p>Give Feedback</p>
-          <a href="#">Help us to improve the new design</a>
-        </div>
-      </div>
-      <hr />
-      <div class="settings-links">
-        <img
-          src="https://i.postimg.cc/QCcPNYRV/setting.png"
-          class="settings-icon"
-        />
-        <a href="#"
-          >Settings & Privacy
-          <img src="https://i.postimg.cc/RF1dBMWr/arrow.png" width="10px"
-        /></a>
-      </div>
-      <div class="settings-links">
-        <img
-          src="https://i.postimg.cc/C5tydfK6/help.png"
-          class="settings-icon"
-        />
-        <a href="#"
-          >Help & Support<img
-            src="https://i.postimg.cc/RF1dBMWr/arrow.png"
-            width="10px"
-        /></a>
-      </div>
-      <div class="settings-links">
-        <img
-          src="https://i.postimg.cc/5yt1XVSj/display.png"
-          class="settings-icon"
-        />
-        <a href="#"
-          >Display & Accessibility
-          <img src="https://i.postimg.cc/RF1dBMWr/arrow.png" width="10px"
-        /></a>
-      </div>
-      <div class="settings-links">
-        <img
-          src="https://i.postimg.cc/PJC9GrMb/logout.png"
-          class="settings-icon"
-        />
-        <a href="#"
-          >Logout
-          <img src="https://i.postimg.cc/RF1dBMWr/arrow.png" width="10px"
-        /></a>
-      </div>
-    </div>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 
 <div class="container">
-  <!----------------Left Sidebar----------------------->
-  <div class="left-sidebar">
-    <div class="imp-links">
-      <a href="#"
-        ><img src="https://i.postimg.cc/RCj4MjnC/news.png" />Latest News</a
-      >
-      <a href="#"
-        ><img src="https://i.postimg.cc/MpBwMtV0/friends.png" />Friendss</a
-      >
-      <a href="#"><img src="https://i.postimg.cc/44FRWj1b/group.png" />Group</a>
-      <a href="#"
-        ><img
-          src="https://i.postimg.cc/0jh39RtT/marketplace.png"
-        />Marketplace</a
-      >
-      <a href="#"><img src="https://i.postimg.cc/VsXHCTVk/watch.png" />Watch</a>
-      <a href="#">See More</a>
-    </div>
-
-    <p style="margin: 25px 0;color: #626262;font-weight: 500;">Your Shortcuts</p>
-    <div *ngFor="let i of shortcuts" class="shortcut-link">
-      <a href="#"
-        ><img src={{i.image_url}}/>{{i.text}}</a
-      >
-    </div>
-  </div>
-
-  <!----------------Main Sidebar----------------------->
-  <div class="main-content">
-    
-    <div class="story-gallery">
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{userprofilephoto}})">
-        <img src="https://i.postimg.cc/TPh453Zz/upload.png" />
-        <p>Post Story</p>
-      </div>
-
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story2.url}})">
-        <img src={{story2.profile_url}} />
-        <p>{{story2.name}}</p>
-
-      </div>
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story3.url}})">
-        <img src={{story3.profile_url}} />
-        <p>{{story3.name}}</p>
-
-      </div>
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story4.url}})">
-        <img src={{story4.profile_url}} />
-        <p>{{story4.name}}</p>
-
-      </div>
-      <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{story5.url}})">
-        <img src={{story5.profile_url}} />
-        <p>{{story5.name}}</p>
-      </div>
-    </div>
-
-    <div class="write-post-container">
-      <div class="user-profile">
-        <img src={{userprofilephoto}} />
-        <div>
-          <p>{{user.firstname+" "+user.lastname}}</p>
-          <small>Public <i class="fas fa-caret-down"></i></small>
-        </div>
-      </div>
-      <div class="post-input-container">
-        <textarea rows="3" placeholder="What's on your mind {{user.firstname}}?"></textarea>
-        <div class="add-post-links">
-          <a href="#"
-            ><img src="https://i.postimg.cc/QMD2BDXs/live-video.png" />Live
-            Video</a
-          >
-          <a href="#"
-            ><img src="https://i.postimg.cc/6pKKZn0D/photo.png" />Photo/Video</a
-          >
-          <a href="#"
-            ><img
-              src="https://i.postimg.cc/Pf6TBCdD/feeling.png"
-            />Feling/Activity</a
-          >
-        </div>
-      </div>
-    </div>
-
-    <div *ngFor="let post of posts" class="post-container">
-      <div class="post-row">
-        <div class="user-profile">
-          <img [src]="post.imgSrc" />
-          <div>
-            <p>{{ post.userName }}</p>
-            <span>{{ post.timestamp }}</span>
-          </div>
-        </div>
-        <a href="#"><i class="fas fa-ellipsis-v"></i></a>
-      </div>
-      <p class="post-text" [innerHTML]="post.postText"></p>
-      <img [src]="post.postImgSrc" class="post-img" />
-      <div class="post-row">
-        <div class="activity-icons">
-          <div>
-            <img src="https://i.postimg.cc/pLKNXrMq/like-blue.png" />{{ post.likeCount }}
-          </div>
-          <div><img src="https://i.postimg.cc/rmjMymWv/comments.png" />{{ post.commentCount }}</div>
-          <div><img src="https://i.postimg.cc/T2bBchpG/share.png" />{{ post.shareCount }}</div>
-        </div>
-        <div class="post-porfile-icon">
-          <img [src]="post.imgSrc" /><i class="fas fa-caret-down"></i>
-        </div>
-      </div>
-    </div>
-    
-    <button type="button" class="load-more-btn">Load More</button>
-  </div>
-  <!----------------Right Sidebar----------------------->
-  <div class="right-sidebar">
-    <div class="sidebar-title">
-      <h4>Events</h4>
-      <a href="#">See All</a>
-    </div>
-
-    <div *ngFor="let d of Date" class="event">
-      <div class="left-event">
-        <h3>{{d.Day}}</h3>
-        <span>{{d.Month}}</span>
-      </div>
-      <div class="right-event">
-        <h4>{{d.desc}}</h4>
-        <p><i class="fas fa-map-marker-alt"></i>{{d.venue}}</p>
-        <a href="#">More Info</a>
-      </div>
-    </div>
-
-    <div class="sidebar-title">
-      <h4>Advertisement</h4>
-      <a href="#">close</a>
-    </div>
-    <img
-      src="https://i.postimg.cc/CLXYx9BL/advertisement.png"
-      class="siderbar-ads"
-    />
-    <div class="sidebar-title">
-      <h4>Conversation</h4>
-      <a href="#">Hide Chat</a>
-    </div>
-    <div class="online-list">
-      <div class="online">
-        <img src="https://i.postimg.cc/XNPtfdVs/member-1.png" />
-      </div>
-      <p>Alison Mina</p>
-    </div>
-    <div class="online-list">
-      <div class="online">
-        <img src="https://i.postimg.cc/4NhqByys/member-2.png" />
-      </div>
-      <p>Jackson Aston</p>
-    </div>
-    <div class="online-list">
-      <div class="online">
-        <img src="https://i.postimg.cc/FH5qqvkc/member-3.png" />
-      </div>
-      <p>Samona Rose</p>
-    </div>
-    <div class="online-list">
-      <div class="online">
-        <img src="https://i.postimg.cc/Sx65bPcP/member-4.png" />
-      </div>
-      <p>Mike Pérez</p>
-    </div>
-  </div>
+  <app-left-sidebar></app-left-sidebar>
+  <app-main-content></app-main-content>
+  <app-right-sidebar></app-right-sidebar>
 </div>
