--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div class="container">
+<div class="container" style="display: flex;justify-content:space-around;">
   <app-left-sidebar></app-left-sidebar>
   <app-main-content></app-main-content>
   <app-right-sidebar></app-right-sidebar>
