--- a/src/app/story-gallery/story-gallery.component.html
+++ b/src/app/story-gallery/story-gallery.component.html
@@ -1,5 +1,5 @@
 <div class="story-gallery">
-    <div class="story" style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)),url({{userprofilephoto}})">
+    <div class="story story1">
       <img src="https://i.postimg.cc/TPh453Zz/upload.png" />
       <p>Post Story</p>
     </div>
