--- a/src/app/write-post-container/write-post-container.component.html
+++ b/src/app/write-post-container/write-post-container.component.html
@@ -1,26 +1,28 @@
 <div class="write-post-container">
-    <div class="user-profile">
-      <img src={{userprofilephoto}} />
-      <div>
-        <p>{{user.firstname+" "+user.lastname}}</p>
-        <small>Public <i class="fas fa-caret-down"></i></small>
-      </div>
-    </div>
-    <div class="post-input-container">
-      <textarea rows="3" placeholder="What's on your mind {{user.firstname}}?"></textarea>
-      <div class="add-post-links">
-        <a href="#"
-          ><img src="https://i.postimg.cc/QMD2BDXs/live-video.png" />Live
-          Video</a
-        >
-        <a href="#"
-          ><img src="https://i.postimg.cc/6pKKZn0D/photo.png" />Photo/Video</a
-        >
-        <a href="#"
-          ><img
-            src="https://i.postimg.cc/Pf6TBCdD/feeling.png"
-          />Feling/Activity</a
-        >
-      </div>
+  <div class="user-profile">
+    <img src="{{ userprofilephoto }}" />
+    <div>
+      <p>{{ user.firstname + " " + user.lastname }}</p>
+      <small>Public <i class="fas fa-caret-down"></i></small>
     </div>
   </div>
+  <div class="post-input-container">
+    <textarea
+      rows="3"
+      placeholder="What's on your mind {{ user.firstname }}?"
+    ></textarea>
+    <div class="add-post-links">
+      <a href="#"
+        ><img src="https://i.postimg.cc/QMD2BDXs/live-video.png" />Live Video</a
+      >
+      <a href="#"
+        ><img src="https://i.postimg.cc/6pKKZn0D/photo.png" />Photo/Video</a
+      >
+      <a href="#"
+        ><img
+          src="https://i.postimg.cc/Pf6TBCdD/feeling.png"
+        />Feling/Activity</a
+      >
+    </div>
+  </div>
+</div>
