--- a/src/styles.css
+++ b/src/styles.css
@@ -50,8 +50,21 @@ body {
   text-decoration: none;
 }
 
-.container {
-  display: flex;
-  justify-content: space-between;
-  padding: 13px 5%;
+@media (max-width: 900px) {
+  .logo {
+    width: 110px;
+    margin-right: 20px;
+  }
+
+  .main-content {
+    flex-basis: 100%;
+  }
+  .story p {
+    font-size: 10px;
+  }
+  .story.story1 img {
+    width: 25px;
+    bottom: 30px;
+  }
 }
+
