handled some errors in media query

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
 <app-navbar></app-navbar>
 
-<div class="container" style="display: flex;justify-content:space-around;">
-  <app-left-sidebar></app-left-sidebar>
-  <app-main-content></app-main-content>
-  <app-right-sidebar></app-right-sidebar>
+<div class="container" style="display:flex; justify-content: space-between;">
+  <div class="left-sidebar">
+    <app-left-sidebar></app-left-sidebar>
+  </div>
+
+  <div class="main-content">
+    <app-main-content></app-main-content>
+  </div>
+
+  <div class="right-sidebar">
+    <app-right-sidebar></app-right-sidebar>
+  </div>
 </div>
