--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,1 @@
-<app-navbar></app-navbar>
-
-<div class="container" style="display:flex; justify-content: space-between;">
-  <div class="left-sidebar">
-    <app-left-sidebar></app-left-sidebar>
-  </div>
-
-  <div class="main-content">
-    <app-main-content></app-main-content>
-  </div>
-
-  <div class="right-sidebar">
-    <app-right-sidebar></app-right-sidebar>
-  </div>
-</div>
+<router-outlet></router-outlet>
